// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas al componente <GifGrid/> Debe mostrar iimagenes cuando se cargan imagenes useFetchGifs 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeInDownBig"
  >
    Goku
  </h3>
  <div
    className="card-grid animate__animated animate__flipInY"
  >
    <GifGrifItems
      id="ABC"
      key="ABC"
      title="Cualquier cosa"
      url="http://localhost/cualquier/cosa.jpg"
    />
  </div>
</Fragment>
`;

exports[`Pruebas al componente <GifGrid/> Validar que el componente se muestre de manera correcta 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeInDownBig"
  >
    Goku
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading
  </p>
  <div
    className="card-grid animate__animated animate__flipInY"
  />
</Fragment>
`;
